Bug 53555 - [4.8 Regression] Bootstrap failure
Summary: [4.8 Regression] Bootstrap failure
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.8.0
: P3 normal
Target Milestone: 4.8.0
Assignee: Not yet assigned to anyone
URL: http://gcc.gnu.org/ml/gcc-patches/201...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-01 13:42 UTC by H.J. Lu
Modified: 2012-06-28 14:24 UTC (History)
5 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2012-06-01 13:42:24 UTC
On Linux/ia32, revision 188107 failed to bootstrap when
configured with

../src-trunk/configure \
       --with-arch=core2 --with-cpu=atom --prefix=/usr/local --enable-clocale=gnu --with-system-zlib --enable-shared --with-demangler-in-ld i686-linux --with-fpmath=sse --enable-languages=c,c++,fortran,java,lto,objc

Comparing stages 2 and 3
warning: gcc/cc1obj-checksum.o differs
warning: gcc/cc1plus-checksum.o differs
warning: gcc/cc1-checksum.o differs
Bootstrap comparison failure!
gcc/gimple-fold.o differs
gcc/jvspec.o differs
make[5]: *** [compare] Error 1

Revision 188104 is OK.
Comment 1 H.J. Lu 2012-06-01 13:44:28 UTC
It may be caused by revision 188107:

http://gcc.gnu.org/ml/gcc-cvs/2012-06/msg00017.html
Comment 2 Yukhin Kirill 2012-06-01 15:07:09 UTC
Igor is looking into

K

Sent from my iPad

On 01.06.2012, at 17:45, "hjl.tools at gmail dot com" <gcc-bugzilla@gcc.gnu.org> wrote:

> http://gcc.gnu.org/bugzilla/show_bug.cgi?id=53555
> 
> H.J. Lu <hjl.tools at gmail dot com> changed:
> 
>           What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                 CC|                            |areg.melikadamyan at gmail
>                   |                            |dot com, kirill.yukhin at
>                   |                            |intel dot com
>   Target Milestone|---                         |4.8.0
> 
> --- Comment #1 from H.J. Lu <hjl.tools at gmail dot com> 2012-06-01 13:44:28 UTC ---
> It may be caused by revision 188107:
> 
> http://gcc.gnu.org/ml/gcc-cvs/2012-06/msg00017.html
> 
> -- 
> Configure bugmail: http://gcc.gnu.org/bugzilla/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.

--------------------------------------------------------------------
Closed Joint Stock Company Intel A/O
Registered legal address: Krylatsky Hills Business Park, 
17 Krylatskaya Str., Bldg 4, Moscow 121614, 
Russian Federation

This e-mail and any attachments may contain confidential material for
the sole use of the intended recipient(s). Any review or distribution
by others is strictly prohibited. If you are not the intended
recipient, please contact the sender and delete all copies.
Comment 3 Igor Zamyatin 2012-06-02 11:17:41 UTC
Hmm, it seems it's not quite correct to check ix86_tune, proper way is to use ix86_arch here. Following change fixes he bootstrap

diff --git a/gcc/config/i386/i386.c b/gcc/config/i386/i386.c
index c6c2c5e..a272411 100644
--- a/gcc/config/i386/i386.c
+++ b/gcc/config/i386/i386.c
@@ -23881,7 +23881,7 @@ ix86_sched_reorder(FILE *dump, int sched_verbose, rtx *ready, int *pn_ready,
   issue_rate = ix86_issue_rate();
 
   /* Do reodering for Atom only.  */
-  if (ix86_tune != PROCESSOR_ATOM)
+  if (ix86_arch != PROCESSOR_ATOM)
     return issue_rate;
   /* Nothing to do if ready list contains only 1 instruction.  */
   if (n_ready <= 1)
Comment 4 H.J. Lu 2012-06-02 12:07:59 UTC
(In reply to comment #3)
> Hmm, it seems it's not quite correct to check ix86_tune, proper way is to use
> ix86_arch here. Following change fixes he bootstrap
> 
> diff --git a/gcc/config/i386/i386.c b/gcc/config/i386/i386.c
> index c6c2c5e..a272411 100644
> --- a/gcc/config/i386/i386.c
> +++ b/gcc/config/i386/i386.c
> @@ -23881,7 +23881,7 @@ ix86_sched_reorder(FILE *dump, int sched_verbose, rtx
> *ready, int *pn_ready,
>    issue_rate = ix86_issue_rate();
> 
>    /* Do reodering for Atom only.  */
> -  if (ix86_tune != PROCESSOR_ATOM)
> +  if (ix86_arch != PROCESSOR_ATOM)
>      return issue_rate;
>    /* Nothing to do if ready list contains only 1 instruction.  */
>    if (n_ready <= 1)

This is the wrong fix. Bootstrap will fail if GCC is configured
with --with-arch=atom.
Comment 5 H.J. Lu 2012-06-02 13:29:13 UTC
A patch is posted at

http://gcc.gnu.org/ml/gcc-patches/2012-06/msg00115.html
Comment 6 hjl@gcc.gnu.org 2012-06-04 23:31:57 UTC
Author: hjl
Date: Mon Jun  4 23:31:54 2012
New Revision: 188212

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=188212
Log:
Skip debug insns in ix86_sched_reorder

	PR bootstrap/53555
	* config/i386/i386.c (ix86_sched_reorder) Skip debug insns.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/i386.c
Comment 7 Jakub Jelinek 2012-06-28 14:24:35 UTC
Fixed.