Skip debug insns in ix86_sched_reorder

PR bootstrap/53555
	* config/i386/i386.c (ix86_sched_reorder) Skip debug insns.

From-SVN: r188212